[gd_scene load_steps=18 format=3 uid="uid://08ai5wpiybru"]

[ext_resource type="Script" path="res://giant_spider_enemy.gd" id="1_pves6"]
[ext_resource type="Texture2D" uid="uid://uc1gyriycrb2" path="res://assets/Enemies/Raccoontruck_Giant_Spider/Arigopeaurantia2.png" id="1_y7bdw"]
[ext_resource type="Texture2D" uid="uid://d3kc2dl36tmud" path="res://assets/Enemies/Raccoontruck_Giant_Spider/Arigopeaurantia2_dmg.png" id="2_0oq3w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mfyin"]
atlas = ExtResource("2_0oq3w")
region = Rect2(0, 0, 263, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n4jp"]
atlas = ExtResource("2_0oq3w")
region = Rect2(263, 0, 263, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_50q2j"]
atlas = ExtResource("1_y7bdw")
region = Rect2(0, 0, 266, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_58gj5"]
atlas = ExtResource("1_y7bdw")
region = Rect2(266, 0, 266, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_1poo8"]
atlas = ExtResource("1_y7bdw")
region = Rect2(532, 0, 266, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_og30w"]
atlas = ExtResource("1_y7bdw")
region = Rect2(0, 176, 266, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxocb"]
atlas = ExtResource("1_y7bdw")
region = Rect2(266, 176, 266, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vf8t"]
atlas = ExtResource("1_y7bdw")
region = Rect2(0, 0, 266, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhe8o"]
atlas = ExtResource("1_y7bdw")
region = Rect2(266, 0, 266, 176)

[sub_resource type="SpriteFrames" id="SpriteFrames_51phk"]
animations = [{
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_mfyin")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_3n4jp")
}],
"loop": true,
"name": &"Damage",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_50q2j")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_58gj5")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_1poo8")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_og30w")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_bxocb")
}],
"loop": true,
"name": &"Eat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vf8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhe8o")
}],
"loop": true,
"name": &"Standstill",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7yvgk"]
radius = 31.0
height = 92.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j2nut"]
radius = 12.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_awyqq"]
radius = 18.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fk0qj"]
radius = 23.0
height = 84.0

[node name="Giant_spider_enemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 33
script = ExtResource("1_pves6")

[node name="Giant_spider_animations" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_51phk")
animation = &"Damage"
autoplay = "Standstill"
frame_progress = 0.278003

[node name="Giant_spider_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_7yvgk")

[node name="Giant_spider_hurtbox_1" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="Hurtbox_1_shape" type="CollisionShape2D" parent="Giant_spider_hurtbox_1"]
position = Vector2(-1, 33)
shape = SubResource("CapsuleShape2D_j2nut")
debug_color = Color(0.85098, 0.356863, 0.282353, 0.419608)

[node name="Giant_spider_hurtbox_2" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="Hurtbox_2_shape" type="CollisionShape2D" parent="Giant_spider_hurtbox_2"]
position = Vector2(1, 36)
shape = SubResource("CapsuleShape2D_awyqq")
debug_color = Color(0.662745, 0.509804, 0.12549, 0.419608)

[node name="Ouchie_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="Ouchiebox" type="CollisionShape2D" parent="Ouchie_area"]
position = Vector2(2, -8)
shape = SubResource("CapsuleShape2D_fk0qj")
debug_color = Color(0.737255, 0.305882, 0.882353, 0.419608)
